# RTChallenge_Cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  RT_Challenge_Cpp.code-workspace  main.cpp
src/lib/: CMakeLists.txt  rt_datatypes.cpp  rt_datatypes.hpp  rt_transforms.cpp  rt_transforms.hpp  rt_utils.cpp  rt_utils.hpp
src/tests/: test_001-a.cpp  test_001-b.cpp  test_002-a.cpp  test_002-b.cpp
